--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,5 @@
-theme = catppuccin-macchiato
-font-size = 13
-font-family = "JetBrainsMonoNL Nerd Font"
+theme = catppuccin-mocha
+font-size = 14
+font-family = "MesloLgs Nerd Font Mono"
+macos-titlebar-style = hidden
+mouse-hide-while-typing = true
