--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,3 +3,7 @@ font-size = 14
 font-family = "MesloLgs Nerd Font Mono"
 macos-titlebar-style = hidden
 mouse-hide-while-typing = true
+clipboard-read = allow
+copy-on-select = clipboard
+window-padding-x = 10,10
+window-padding-y = 10,0
